--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -401,8 +401,19 @@ span.line {
     left:1rem;
     position:fixed;
     z-index:4;
+    transform:translateY(-20px);
+    opacity:0;
+  }
+  &.skrollable-after{
+      transform:translateY(0);
+      opacity:1;
+      transition:transform 0.5s ease-out,opacity 1s ease-out;
+      
   }
 }
+
+
+
 .name-link{
     @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 1.333rem);
     font-family: 'Helvetica Neue Bold';
@@ -620,13 +631,11 @@ section.intro,section.more_about{
       }
   }
   p{
-    padding-top:0;
-    
-    @include fluid-type(font-size, 20rem, 100rem, 1rem, 1rem);
-    @include bp(mamabear){  
+      @include fluid-type(font-size, 20rem, 100rem, 1rem, 1rem);
+      padding-top:0;
       margin-left:11.1%;
      
-    }
+   
 
   }
 
@@ -762,7 +771,7 @@ section.opening{
 
 section.projects{
   position:relative;
-  z-index:1;
+  z-index:2;
   @include clearfix();
   width:93.75vw;
   margin:0 3.125vw;
@@ -1001,7 +1010,7 @@ section.projects .project{
       @media (hover: hover) {  //this means it will only occur on hover and not touch
         &:hover{
           background-color:#fff;
-          border:1px solid #d2d7e0;
+          border:1px solid #e6e6e6;
         }
     
       }
