--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -103,7 +103,29 @@ table {
   border-spacing: 0;
 }
 
+//PACE.JS
 
+.pace {
+  pointer-events: none;
+  user-select: none;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+.pace .pace-progress {
+  background: $yellow;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  @include bp(babybear){
+    height: 4px;
+  }
+}
 
 
 // FONTS
